..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)
..F....... [ZBX-1845] added tabs to host massupdate form (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.12rc1

New features:
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian and Slovak translation; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...PS. [ZBX-6731] faster processing of log files by agent on Unix (Andris)
...G...PS. [ZBX-6729] faster processing of log files by agent on Microsoft Windows (Andris)
...G...... [ZBX-6933] added substitution of eventlog parameter insertion strings (wiper)
...G...... [ZBX-7853] changed log level from warning to information when listener, active checks and collector processes start (igors)
A.F.....S. [ZBX-7674] implemented batch processing of IT services to resolve deadlocks and improve performance (Eduard, wiper)
........S. [ZBX-5789] improved performance of processing discovered graphs by the low-level discovery rule (Sasha)
........S. [ZBX-5789] fixed updating of low-level discovered graphs: the graph identifier never will change (Sasha)
A.F....... [ZBX-7708] fixed trigger prototype error message and trigger form default description value (Oleg)
..F....... [ZBX-7739] removed unused label in screen configuration page when no elements exist (Eduard)

--------------------------------------------------------------------------------
Changes for 2.0.11

2.0.11rc2 was released as 2.0.11 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.11rc2

Bug fixes:
.......PS. [ZBX-7698] fixed closing a connection to the database when database server is unavailable (Sasha)