@@ -1,11 +1,15 @@
-#!/bin/bash
+#!/bin/sh
 
-cd $(dirname $0)
-source settings.sh
+cd `dirname $0`
+. ./settings.sh
 
-if [ -n "$PID_FILE" -a -e "$PID_FILE" ]; then
-	echo "Zabbix Java Gateway is already running"
-	exit 1
+if [ -n "$PID_FILE" -a -f "$PID_FILE" ]; then
+	PID=`cat "$PID_FILE"`
+	if ps -p "$PID" > /dev/null 2>&1; then
+		echo "Zabbix Java Gateway is already running"
+		exit 1
+	fi
+	rm -f "$PID_FILE"
 fi
 
 JAVA=${JAVA:-java}
@@ -16,10 +20,8 @@ if [ -z "$PID_FILE" ]; then
 fi
 
 CLASSPATH="lib"
-for jar in {lib,bin}/*.jar; do
-	if [[ $jar != *junit* ]]; then
-		CLASSPATH="$CLASSPATH:$jar"
-	fi
+for jar in lib/*.jar bin/*.jar; do
+	CLASSPATH="$CLASSPATH:$jar"
 done
 
 ZABBIX_OPTIONS=""
@@ -36,16 +38,39 @@ if [ -n "$START_POLLERS" ]; then
 	ZABBIX_OPTIONS="$ZABBIX_OPTIONS -Dzabbix.startPollers=$START_POLLERS"
 fi
 
+# uncomment to enable remote monitoring of the standard JMX objects on the Zabbix Java Gateway itself
+# JAVA_OPTIONS="$JAVA_OPTIONS -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=12345
+# 	-Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
+
 COMMAND_LINE="$JAVA $JAVA_OPTIONS -classpath $CLASSPATH $ZABBIX_OPTIONS com.zabbix.gateway.JavaGateway"
 
 if [ -n "$PID_FILE" ]; then
-	PID=$(/bin/bash -c "$COMMAND_LINE > /dev/null 2>&1 & echo \$!")
-	if ps -p $PID > /dev/null 2>&1; then
-		echo $PID > $PID_FILE
-	else
-		echo "Zabbix Java Gateway did not start"
+
+	# check that the PID file can be created
+
+	touch "$PID_FILE"
+	if [ $? -ne 0 ]; then
+		echo "Zabbix Java Gateway did not start: cannot create PID file"
 		exit 1
 	fi
+
+	# start the gateway and output pretty errors to the console
+
+	STDOUT=`$COMMAND_LINE & echo $! > "$PID_FILE"`
+	if [ -n "$STDOUT" ]; then
+		echo "$STDOUT"
+	fi
+
+	# verify that the gateway started successfully
+
+	PID=`cat "$PID_FILE"`
+	ps -p "$PID" > /dev/null 2>&1
+	if [ $? -ne 0 ]; then
+		echo "Zabbix Java Gateway did not start"
+		rm -f "$PID_FILE"
+		exit 1
+	fi
+
 else
 	exec $COMMAND_LINE
 fi
