@@ -895,10 +895,13 @@ A......... [ZBX-5498] applications API refactoring (Vedmak)
 Changes for 2.0.12rc1
 
 New features:
+....IJ.... [ZBXNEXT-1889] made startup.sh and shutdown.sh scripts for Java gateway work in /bin/sh (asaveljevs)
 .D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
 A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian and Slovak translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+....IJ.... [ZBX-5379] added stale PID file detection for Java gateway (asaveljevs)
+....IJ.... [ZBX-5558] fixed Java gateway error messages not being shown in the console on startup (asaveljevs)
 ...G...PS. [ZBX-6731] faster processing of log files by agent on Unix (Andris)
 ...G...PS. [ZBX-6729] faster processing of log files by agent on Microsoft Windows (Andris)
 ...G...... [ZBX-6933] added substitution of eventlog parameter insertion strings (wiper)
